[package]
name = "mikanbako"
version = "1.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
clap = "3.0.0-beta.4"
futures = "0.3.17"
indicatif = "0.17.0-beta.1"
percent-encoding = "2.1.0"
rand = "0.8.4"
reqwest = { version = "0.11.4", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
url = "2.2.2"
